fix stretching

--- a/packages/frosted-ui/src/components/avatar/avatar.css
+++ b/packages/frosted-ui/src/components/avatar/avatar.css
@@ -1,6 +1,7 @@
 .fui-AvatarRoot {
   container-type: inline-size;
   display: inline-grid;
+  grid-template: 1fr / 1fr;
   place-items: center;
   vertical-align: middle;
   user-select: none;
@@ -31,6 +32,7 @@
 
 .fui-AvatarImage {
   grid-area: 1 / 1;
+  aspect-ratio: 1;
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -44,6 +46,7 @@
 
 .fui-AvatarFallback {
   grid-area: 1 / 1;
+  aspect-ratio: 1;
   z-index: 0;
   width: 100%;
   height: 100%;
